# SkyFireEMU_old

./: .gitignore  .hgignore  CMakeLists.txt  Not a supported branch.txt  PreLoad.cmake  README  SkyFire_AutoBuild.bat  THANKS  TODO.txt  ToDo.txt  We Moved.txt  dbchangelog.txt  mmaps_version.txt  revision.h.in.cmake  sai.patch  updateall.sh
406a_extractors/: make_vmaps.bat  makevmaps_SIMPLE.bat
NEW/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  SkyFire.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  revision.h
NEW/dep/: INSTALL.vcxproj  INSTALL.vcxproj.filters
NEW/src/: INSTALL.vcxproj  INSTALL.vcxproj.filters
Unfinished_Scripts/: lost_city_of_the_tolvir.h
Unfinished_Scripts/Lost_City_of_the_Tol'vir/: data.sql  lost_city_of_the_tolvir.h
cmake/: genrev.cmake  options.cmake  showoptions.cmake
cmake/macros/: CheckBuildDir.cmake  CheckPlatform.cmake  FindACE.cmake  FindMySQL.cmake  FindOpenSSL.cmake  FindPCHSupport.cmake  FindReadline.cmake  UseFolders.cmake
cmake/platform/: cmake_uninstall.in.cmake  settings.cmake
contrib/cleanup/: tab2spaces.sh
contrib/git_id/: CMakeLists.txt  git_id.cpp
database/: .gitignore  Database_Installer.bat  Database_Installer_Updater.bat  README  README_1st.txt  linux_installer.sh
database/archived_updates/: readme.txt
database/base/: access_requirement.sql  achievement_criteria_data.sql  achievement_reward.sql  areatrigger_involvedrelation.sql  areatrigger_scripts.sql  areatrigger_tavern.sql  areatrigger_teleport.sql  autobroadcast.sql  battleground_template.sql  battlemaster_entry.sql  character_banned.sql  command.sql  conditions.sql  creature_addon.sql  creature_ai_scripts.sql  creature_ai_summons.sql  creature_ai_texts.sql  creature_classlevelstats.sql  creature_equip_template.sql  creature_formations.sql  creature_involvedrelation.sql  creature_linked_respawn.sql  creature_model_info.sql  creature_onkill_reputation.sql  creature_questrelation.sql  creature_respawn.sql  creature_template_addon.sql  creature_transport.sql  custom_texts.sql  db_script_string.sql  disables.sql  disenchant_loot_template.sql  event_scripts.sql  exploration_basexp.sql  fishing_loot_template.sql  game_event.sql  game_event_battleground_holiday.sql  game_event_condition.sql  game_event_creature.sql  game_event_creature_quest.sql  (+110 more)
database/update_packs/: 1_27_Playercreateinfo_Spells.sql  3_27_creature_model_info.sql  3_27_multi_update.sql  5_46_item_template.sql  6_47_spell_updates.sql
database/updates/: 01_01_11_old_updates_from_skyfire.sql  03_05_11_world_instance.sql  05_04_11_spell_starfall.sql  05_04_11_world_spell_bonus_data.sql  07_05_11_spell_ranks.sql  17_05_11_db_engine.sql  17_05_11_herbs_loot.sql  17_05_11_mineral_veins.sql  17_05_11_stonecore_mobs.sql  18_05_11_creature_brom_forgehammer.sql  18_05_11_creature_glenn_arbuckle.sql  18_05_11_creature_lieutenant_fawkes.sql  18_05_11_creature_richard_maschner.sql  18_05_11_creature_talaa.sql  18_05_11_innkeeper_teresa.sql  19_05_11_creature_basehp3.sql  19_05_11_creature_frederick_zyda.sql  19_05_11_creature_senthii.sql  19_05_11_spell_linked_spell.sql  2011_05_16_deepholm_ports_and_portals.sql  2011_05_16_portal_to_vashjir.sql  (+24 more)
dep/: CMakeLists.txt  PackageList.txt
doc/: cmake_copyright_header.txt  cplusplus_copyright_header.txt  cplusplus_scripts_copyright_header.txt  scripts_cplusplus_copyright_header.txt
sql/: 29_06_11_world_authresponse.sql  29_06_11_world_char_enum.sql  CMakeLists.txt  OpcodesUpdates4.2.0.sql  bg.sql  emuopcodes.sql  opcode_structure_template.sql  trinity_string.sql
src/: CMakeLists.txt
src/redirect/: CMakeLists.txt
src/redirect/Hook/: CMakeLists.txt  CactusRedirectWin.cpp  CactusRedirectWin.h  SkyFireRedirectWin.cpp  SkyFireRedirectWin.h  Stdafx.cpp  Stdafx.h  detours.h  detours.lib
src/redirect/Injector/: CMakeLists.txt  MacOSX.h  Windows.h  main.cpp
src/redirect/Patcher/: CactusPatcher.sln  SkyFirePatcher.sln
src/redirect/Patcher/CactusPatcher/: CactusPatcher.csproj  Form1.Designer.cs  Form1.cs  Program.cs
src/redirect/Patcher/CactusPatcher/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
src/redirect/Patcher/SkyFirePatcher/: Form1.Designer.cs  Form1.cs  Program.cs  SkyFirePatcher.csproj
src/redirect/Patcher/SkyFirePatcher/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
src/tools/movements_extractor/: CMakeLists.txt  IntermediateValues.cpp  IntermediateValues.h  MapBuilder.cpp  MapBuilder.h  PathCommon.h  PathGenerator.cpp  TerrainBuilder.cpp  TerrainBuilder.h  VMapExtensions.cpp
src/tools/movements_extractor/Extract/: extract_mmaps.py
src/tools/movements_extractor/Info/: OffmeshExample.txt  README.txt
win/: SkyFire.sln  SkyFire_vc90.sln
(+2430 files in other folders)
